--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### NextJS ###
+# Next build dir
+.next/
+
 # Logs
 logs
 *.log
@@ -36,3 +40,5 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 .next
+
+./package-lock.json
